# flight-data-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
EDA/: 00_possible_duplicates.sql  01_most_common_routes.sql  02_route_price_summary.sql  03_airline_price_by_route.sql  04_airline_price_by_day_searched.sql
src/: config.py  db_transactions.py  email_alert.py  gsheets.py  main.py  secret_load.py  token_refresh.py
tests/: test_email_alert.py  test_gsheets.py  test_main_api.py  test_main_processing.py  test_secret_load.py
